branches/wip/Archive/d0ee696020a34921a93c8d307a4e6797-d3f8baa3b7d2417dc5133f339373d86e/output
main.cpp: In lambda function:
main.cpp:184:43: error: inconsistent types 'void' and 'std::future<void>' deduced for lambda return type
                 return worker.execute(task);
                                           ^
main.cpp:184:43: error: return-statement with a value, in function returning 'void' [-fpermissive]
